updated user gateway by user API
